# rty.kts

./: CMakeLists.txt  README.md  build.gradle.kts  google-services.json  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  builds.yml  codeql.yml
app/: build.gradle.kts
app/apply/: apply.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: arm64-v8a.keystore
app/src/main/cpp/: CMakeLists.txt  c++_sh.cpp  c++_shared.cpp
app/src/main/java/com/android/kvc/xiao/v2/miui/: MainActivity.kt  MtService.kt  NotificationService.kt
app/src/main/java/com/android/kvc/xiao/v2/miui/activity/: Apps1.java  Apps2.java  Apps3.java  Apps4.java  Apps5.java
app/src/main/java/com/android/kvc/xiao/v2/miui/activity/v1/: Apps1.java
app/src/main/java/com/android/kvc/xiao/v2/miui/activity/v2/: Apps2.java
app/src/main/res/drawable/: ic_apps_black_24dp.xml  ic_atyy_black_24dp.xml  ic_call_black_24dp.xml  ic_dashboard_black_24dp.xml  ic_launcher_background.xml  ic_settings_black_24dp.xml  not.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  custom_notification_layout.xml  fragment_atyy.xml  fragment_call.xml  fragment_dashboard.xml  fragment_home.xml  fragment_settings.xml  layout_mt.xml
app/src/main/res/menu/: bottom_nav_menu.xml  navigationview_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: shortcuts.xml  y.xml
(+13 files in other folders)
